[package]
name = "riftdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "~1.1.2"
prost = "~0.9.0"
slog = { version = "2.7", features = ["nested-values"]}
slog-async = { version = "2.7", features = ["nested-values"] }
slog-json = { version = "2.4", features = ["nested-values"] }
slog-term = { version = "2.8", features = ["nested-values"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "~1.14.0", features = ["rt-multi-thread"] }
tonic = { version = "~0.6.1" }

[build-dependencies]
tonic-build = "~0.6.0"

[lib]
name = "librift"
path = "src/lib.rs"

[[bin]]
name = "riftd"
path = "src/bin/riftd.rs"
test = false
bench = false

[[bin]]
name = "riftctl"
path = "src/bin/riftctl.rs"
test = false
bench = false
