[package]
name = "riftdb"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "~1.1.0"
exitcode = "~1.1.2"
futures = "0.3.19"
hyper = "~0.14.15"
lazy_static = "1.4.0"
prometheus = "0.13"
prost = "0.9"
prost-types = "0.9"
rand = "0.8.4"
slog = { version = "2.7", features = ["nested-values"]}
slog-async = { version = "2.7", features = ["nested-values"] }
slog-json = { version = "2.4", features = ["nested-values"] }
slog-term = { version = "2.8", features = ["nested-values"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "~1.15.0", features = ["rt-multi-thread"] }
tonic = { version = "~0.6.1" }
tonic-reflection = "~0.3.0"
tonic-health = "~0.5.0"
uuid = { version = "~0.8.2", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4.2"

[build-dependencies]
tonic-build = "~0.6.0"

[lib]
name = "librift"
path = "src/lib.rs"

[[bin]]
name = "riftd"
path = "src/bin/riftd.rs"
test = false
bench = false

[[bin]]
name = "riftctl"
path = "src/bin/riftctl.rs"
test = false
bench = false
